ig practices updated